# 3d-reconstruction

./: .gitignore  .gitmodules  prepare-vm.zsh  upload-data.zsh
Display/: dataset.py  poses.py  pyproject.toml
NeRF/: dataset.py  display.py  nerf.py  poses.py  pyproject.toml
Thesis/: 00-title.tex  01-introduction.tex  02-methods-review.tex  03-blender.tex  03-nerf.tex  04-diamond-method.tex  04-methods.tex  05-alternative.tex  05-conclusions.tex  05-skull-method.tex  06-results.tex  main.tex  references.bib  title.tex
