[project]
name = "nerf"
version = "0.1.0"
description = ""
authors = [
    {name = "SherAndrei",email = "welldryus@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tensorflow (>=2.18.0,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "pyqt5 (>=5.15.11,<6.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
